@@ -7,32 +7,32 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import corallus.artConnect.artConnect.dto.response.MessageResponse;
+import corallus.artConnect.artConnect.queryFilter.ArtistaFindAllQF;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import corallus.artConnect.artConnect.dto.atores.artista.ArtistaCadastroDTO;
-import corallus.artConnect.artConnect.dto.atores.artista.ArtistaDTO;
-import corallus.artConnect.artConnect.dto.atores.artista.ArtistaEditDTO;
-import corallus.artConnect.artConnect.entity.ListaTipoStatus;
+import corallus.artConnect.artConnect.dto.request.artista.ArtistaCadastroRequest;
+import corallus.artConnect.artConnect.dto.request.artista.ArtistaEditRequest;
+import corallus.artConnect.artConnect.dto.response.artista.ArtistaResponse;
+import corallus.artConnect.artConnect.entity.Publicacao;
 import corallus.artConnect.artConnect.entity.Seguida;
-
-
-import corallus.artConnect.artConnect.entity.Status;
-import corallus.artConnect.artConnect.entity.TipoConta;
 import corallus.artConnect.artConnect.entity.atores.Artista;
 import corallus.artConnect.artConnect.entity.contato.Contato;
-import corallus.artConnect.artConnect.entity.publicacao.Publicacao;
-import corallus.artConnect.artConnect.entity.publicacao.Reacao;
+import corallus.artConnect.artConnect.entity.reacao.Reacao;
+import corallus.artConnect.artConnect.entity.status.Status;
+import corallus.artConnect.artConnect.enums.ListaTipoConta;
+import corallus.artConnect.artConnect.enums.ListaTipoStatus;
 import corallus.artConnect.artConnect.error.errors.ArteNotFoundException;
 import corallus.artConnect.artConnect.error.errors.ResourceNotFoundException;
 import corallus.artConnect.artConnect.error.errors.UserAlreadyExistsException;
 import corallus.artConnect.artConnect.error.errors.UserNotFoundException;
-import corallus.artConnect.artConnect.repository.ArteRepository;
-import corallus.artConnect.artConnect.repository.StatusRepository;
+import corallus.artConnect.artConnect.repository.arte.ArteRepository;
 import corallus.artConnect.artConnect.repository.TagRepository;
-import corallus.artConnect.artConnect.repository.TipoStatusRepository;
 import corallus.artConnect.artConnect.repository.atores.ArtistaRepository;
 import corallus.artConnect.artConnect.repository.atores.UsuarioRepository;
+import corallus.artConnect.artConnect.repository.status.StatusRepository;
+import corallus.artConnect.artConnect.repository.status.TipoStatusRepository;
 
 @Service
 public class ArtistaService implements IValidacoes {
@@ -55,20 +55,26 @@ public class ArtistaService implements IValidacoes {
     @Autowired
     private TagRepository tagRepository;
 
-    public List<ArtistaDTO> findAll() {
-        return this.artistaRepository.findAll().stream().map(ArtistaDTO::toDTO).toList();        
+    public List<ArtistaResponse> findAll(ArtistaFindAllQF filter) {
+        List<ArtistaResponse> lista = this.artistaRepository.findAll(filter.toSpecification())
+                .stream()
+                .filter(a->a.getStatus().getTipoStatus().getNomeTipoStatus().equalsIgnoreCase("ATIVO"))
+                .map(ArtistaResponse::toDTO)
+        .collect(Collectors.toList());
+        
+        return lista;    
     }
 
 
-    public ArtistaDTO findById(Long id) {
+    public ArtistaResponse findById(Long id) {
         Artista model = this.artistaRepository.findById(id)
         .orElseThrow(()->new UserNotFoundException());
 
-        return ArtistaDTO.toDTO(model);
+        return ArtistaResponse.toDTO(model);
     }
        
     
-    public String save(ArtistaCadastroDTO artistaDTO) { 
+    public MessageResponse save(ArtistaCadastroRequest artistaDTO) {
         
         if(this.usuarioRepository.existsByEmail(artistaDTO.email())) {
             throw new UserAlreadyExistsException();
@@ -102,30 +108,22 @@ public class ArtistaService implements IValidacoes {
         // DATA, STATUS E TIPO DE CONTA
         artista.setDataCriacao(LocalDateTime.now());
         artista.setStatus(statusInicial);
-        artista.setTipoConta(TipoConta.ARTISTA.name());
+        artista.setTipoConta(ListaTipoConta.ARTISTA.name());
 
 
         artista.setStatus(statusInicial);
         
         this.artistaRepository.save(artista);
-        return "Artista cadastrado com sucesso!";
+        return new MessageResponse("Artista cadastrado com sucesso!");
     }
 
   
-    public String edit(Long id, ArtistaEditDTO artistaDTO) {
-        
-        if (!this.artistaRepository.existsById(id)) {
-            throw new UserNotFoundException("Não foi possivel editar: Conta não existente.");
-        }
-
-        // CAMPOS QUE NÃO PODEM FICAR VAZIOS OU NULOS
-        validarString("O nome não pode ser vazio.", new String[] {artistaDTO.nome()});
+    public MessageResponse edit(Long id, ArtistaEditRequest artistaDTO) {
         
         // BUSCA ARTISTA NO BANCO
         Artista artista = this.artistaRepository.findById(id)
         .orElseThrow(()->new UserNotFoundException("Não foi possivel editar: Conta não existente."));
         
-        artista.setId(id);
         artista.setNome(artistaDTO.nome());
         artista.setNomeArtistico(artistaDTO.nomeArtistico());
         artista.setDataNasc(artistaDTO.dataNasc());
@@ -161,12 +159,9 @@ public class ArtistaService implements IValidacoes {
 
 
         artista.setTextoBio(artistaDTO.textoBio());
-        artista.setContatos(artistaDTO.contatos());
-
-
 
         this.artistaRepository.save(artista);
-        return "Artista atualizado com sucesso!";
+        return new MessageResponse("Artista atualizado com sucesso!");
     }
 
 
