@@ -4,22 +4,26 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import corallus.artConnect.artConnect.dto.response.MessageResponse;
+import corallus.artConnect.artConnect.queryFilter.ContratanteFindAllQF;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import corallus.artConnect.artConnect.dto.atores.contratante.ContratanteCadastroDTO;
-import corallus.artConnect.artConnect.dto.atores.contratante.ContratanteDTO;
-import corallus.artConnect.artConnect.dto.atores.contratante.ContratanteEditDTO;
-import corallus.artConnect.artConnect.entity.ListaTipoStatus;
-import corallus.artConnect.artConnect.entity.Status;
-import corallus.artConnect.artConnect.entity.TipoConta;
+import corallus.artConnect.artConnect.dto.request.contratante.ContratanteCadastroRequest;
+import corallus.artConnect.artConnect.dto.request.contratante.ContratanteEditRequest;
+import corallus.artConnect.artConnect.dto.response.contratante.ContratanteResponse;
 import corallus.artConnect.artConnect.entity.atores.Contratante;
+import corallus.artConnect.artConnect.entity.status.Status;
+import corallus.artConnect.artConnect.enums.ListaTipoConta;
+import corallus.artConnect.artConnect.enums.ListaTipoStatus;
 import corallus.artConnect.artConnect.error.errors.UserAlreadyExistsException;
 import corallus.artConnect.artConnect.error.errors.UserNotFoundException;
-import corallus.artConnect.artConnect.repository.StatusRepository;
-import corallus.artConnect.artConnect.repository.TipoStatusRepository;
 import corallus.artConnect.artConnect.repository.atores.ContratanteRepository;
 import corallus.artConnect.artConnect.repository.atores.UsuarioRepository;
+import corallus.artConnect.artConnect.repository.status.StatusRepository;
+import corallus.artConnect.artConnect.repository.status.TipoStatusRepository;
 
 @Service
 public class ContratanteService implements IValidacoes {
@@ -35,25 +39,36 @@ public class ContratanteService implements IValidacoes {
     @Autowired
     private StatusRepository statusRepository;
 
-    public List<ContratanteDTO> findAll() {
-        return this.contratanteRepository.findAll().stream().map(ContratanteDTO::toDTO).toList();
+    public List<ContratanteResponse> findAll(ContratanteFindAllQF find) {
+        return this.contratanteRepository.findAll(find.toSpecification())
+                .stream()
+                .map(ContratanteResponse::toDTO)
+                .collect(Collectors.toList());
     }
 
-    public ContratanteDTO findById(Long id) {
+    public ContratanteResponse findById(Long id) {
         Contratante contratante = this.contratanteRepository.findById(id).orElseThrow(()->new UserNotFoundException());
-        return ContratanteDTO.toDTO(contratante);
+        return ContratanteResponse.toDTO(contratante);
     }
 
   
-    public String save(String tipo, ContratanteCadastroDTO contratanteDTO) {
+    public MessageResponse save(String tipo, ContratanteCadastroRequest contratanteDTO) {
+        
+        // Valida campos que nunca podem ser vazios
+        validarString(null, new String[] {contratanteDTO.nome(), contratanteDTO.email(), contratanteDTO.senha()});
+
         // VALIDA CNPJ E EMAIL UNICOS
+        // Se já existir e-mail
         if(this.usuarioRepository.existsByEmail(contratanteDTO.email())) {
             throw new UserAlreadyExistsException();
-        } else if(this.contratanteRepository.existsByCnpj(contratanteDTO.cnpj())) {
-            throw new UserAlreadyExistsException("Não foi possível cadastrar: CNPJ já existente.");
         }
-
-        validarString(null, new String[] {contratanteDTO.nome(), contratanteDTO.email(), contratanteDTO.senha()});
+        // Se for empresa
+        if(!tipo.equalsIgnoreCase("cpf")) {
+            // Validação de CNPJ
+            if(this.contratanteRepository.existsByCnpj(contratanteDTO.cnpj())) {
+                throw new UserAlreadyExistsException("Não foi possível cadastrar: CNPJ já existente.");
+            }
+        }
         
         Contratante contratante = new Contratante();
         Status statusInicial = new Status();
@@ -66,14 +81,14 @@ public class ContratanteService implements IValidacoes {
             // SALVA DADOS ESPECIFICOS DE EMPRESA
             contratante.setRazaoSocial(contratanteDTO.razaoSocial());
             contratante.setCnpj(contratanteDTO.cnpj());
-            contratante.setTipoConta(TipoConta.CONTRATANTE_CNPJ.name());
+            contratante.setTipoConta(ListaTipoConta.CONTRATANTE_CNPJ.name());
 
             // EMPRESAS DEVEM SER APROVADAS PELO ADMIN: STATUS PENDENTE
             statusInicial.setTipoStatus(this.tipoStatusRepository.findByNomeTipoStatus(ListaTipoStatus.PENDENTE.name()).get());
             statusInicial.setDescricao("Esperando aprovação do administrador");
            
         } else {
-            contratante.setTipoConta(TipoConta.CONTRATANTE_CPF.name());
+            contratante.setTipoConta(ListaTipoConta.CONTRATANTE_CPF.name());
             statusInicial.setTipoStatus(this.tipoStatusRepository.findByNomeTipoStatus(ListaTipoStatus.ATIVO.name()).get());
             statusInicial.setDescricao(null);
         }
@@ -101,21 +116,18 @@ public class ContratanteService implements IValidacoes {
         
 
         this.contratanteRepository.save(contratante);
-        return "Contratante cadastrado com sucesso!";
+        return new MessageResponse("Contratante cadastrado com sucesso!");
     }
 
 
-    public String edit(Long id, ContratanteEditDTO contratanteDTO) {
-        
-        // SE NÃO EXISTIR
-        if (!this.contratanteRepository.existsById(id)) {
-            throw new UserNotFoundException();
-        }
+    public MessageResponse edit(Long id, ContratanteEditRequest contratanteDTO) {
 
+        // CAMPOS QUE NÃO PODEM ESTAR VAZIO
         validarString(null, new String[] { contratanteDTO.nome() });
         
-        Contratante contratante = new Contratante();
-        contratante.setId(id);
+        Contratante contratante = this.contratanteRepository.findById(id)
+        // SE NÃO EXISTIR
+        .orElseThrow(()->new UserNotFoundException());
         contratante.setNome(contratanteDTO.nome());
         contratante.setRazaoSocial(contratanteDTO.razaoSocial());
        
@@ -137,7 +149,7 @@ public class ContratanteService implements IValidacoes {
 
 
         this.contratanteRepository.save(contratante);
-        return "Contratante atualizado com sucesso!";
+        return new MessageResponse("Contratante atualizado com sucesso!");
     }
 
     @Override
